--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -144,7 +144,6 @@
 					width 50%
 					margin 0
 				> .section__wrapper
-					// max-width 30rem
 					display flex
 					flex-direction column
 					justify-content center
@@ -157,4 +156,8 @@
 			
 	.section__wrapper
 		&--tight
-			width 65%
+			width 55rem
+			
+	.section__btn
+		&--hidden-on-desktop
+			display none
