services pages beta

--- a/b-index.jade
+++ b/b-index.jade
@@ -112,7 +112,7 @@ html(lang="en")
 											li.tags__item JavaScript
 											li.tags__item CSS
 											li.tags__item HTML
-										a.portfolio-item__btn.btn(href="/portfolio") Go to portfolio
+										a.portfolio-item__btn.btn(href="/portfolio/b-index.html") Go to portfolio
 								li.slider__slide
 									.slider__slide-inner.portfolio-item.portfolio-item--mobile
 										p.portfolio-item__descr Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
@@ -120,7 +120,7 @@ html(lang="en")
 											li.tags__item ReactJS Native
 											li.tags__item Ionic
 											li.tags__item Xamarin Framework
-										a.portfolio-item__btn.btn(href="/portfolio") Go to portfolio
+										a.portfolio-item__btn.btn(href="/portfolio/b-index.html") Go to portfolio
 								li.slider__slide
 									.slider__slide-inner.portfolio-item.portfolio-item--design
 										p.portfolio-item__descr Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
@@ -130,12 +130,12 @@ html(lang="en")
 											li.tags__item Adobe Illustrator
 											li.tags__item Interfaces
 											li.tags__item Web Design \ UX
-										a.portfolio-item__btn.btn(href="/portfolio") Go to portfolio
+										a.portfolio-item__btn.btn(href="/portfolio/b-index.html") Go to portfolio
 							.slider__dots
 								button.slider__dot.slider__dot--active(type="button")
 								button.slider__dot(type="button")
 								button.slider__dot(type="button")
-						a.section__btn.section__btn--hidden-on-desktop.btn(href="/portfolio") Go to portfolio
+						a.section__btn.section__btn--hidden-on-desktop.btn(href="/portfolio/b-index.html") Go to portfolio
 							include icons/arrow-go
 			include parts/b-footer
 			+b-footer("hp")
