--- a/styl/index.styl
+++ b/styl/index.styl
@@ -18,6 +18,7 @@
 @import "blocks/slider"
 @import "blocks/portfolio-item"
 @import "blocks/services-table"
+@import "blocks/workflow"
 @import "blocks/projects-gallery"
 @import "blocks/project-item"
 @import "blocks/page-footer"
