--- a/services/b-index.jade
+++ b/services/b-index.jade
@@ -102,11 +102,11 @@ html(lang="en")
 							tr.services-table__big-row
 								td
 								td
-									a.btn(href="/services/more/") Learn More
+									a.btn(href="/services/outsource/b-index.html") Learn More
 								td
-									a.btn(href="/services/more/") Learn More
+									a.btn(href="/services/outstaff/b-index.html") Learn More
 								td
-									a.btn(href="/services/more/") Learn More
+									a.btn(href="/services/relocation/b-index.html") Learn More
 							tr.services-table__row-with-btns
 								td
 								td
