--- a/services/more/index.jade
+++ b/services/more/index.jade
@@ -23,25 +23,28 @@ html(lang="en")
 										include ../../icons/left-arrow
 							ul.slider__slides-wrapper
 								li.slider__slide
-									section.slider__slide-inner.section.section--without-padding-top.section--without-padding-bottom
+									section.slider__slide-inner.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-project
 										h2.section__title.section__title--text-left Project Development
 										p.section__text.section__text--text-left.section__text--with-margin-bottom Aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.
 										p.section__text.section__text--text-left.section__text--with-margin-bottom For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
-										p.section__text.section__text--text-left You do 5%, we do the remaining 95% for you.
-										a.btn(href="#") Services comparison
+										p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
+										a.section__btn.btn(href="/services/b-index.html") Services comparison
+											include ../../icons/arrow-go
 								li.slider__slide
-									section.slider__slide-inner.section.section--without-padding-top.section--without-padding-bottom
+									section.slider__slide-inner.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-team
 										h2.section__title.section__title--text-left Dedicated Development Team
 										p.section__text.section__text--text-left.section__text--with-margin-bottom A cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. You get control over the selection and management of your dedicated IT team, with no unexpected costs, flexible workload and scope.
 										p.section__text.section__text--text-left.section__text--with-margin-bottom While you focus on your projects, we will take care of all time-consuming tasks and ensure clear communication between your in-house team and offshore team.
-										p.section__text.section__text--text-left You do 5%, we do the remaining 95% for you.
-										a.btn(href="#") Services comparison
+										p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
+										a.section__btn.btn(href="/services/b-index.html") Services comparison
+											include ../../icons/arrow-go
 								li.slider__slide
-									section.slider__slide-inner.section.section--without-padding-top.section--without-padding-bottom
+									section.slider__slide-inner.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-relocation
 										h2.section__title.section__title--text-left Specialist for Relocation
 										p.section__text.section__text--text-left.section__text--with-margin-bottom The cost-benefit service that allows you to access a richer pool of IT experts and leverage your human capital. When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
-										p.section__text.section__text--text-left You do 5%, we do the remaining 95% for you.
-										a.btn(href="#") Services comparison
+										p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
+										a.section__btn.btn(href="/services/b-index.html") Services comparison
+											include ../../icons/arrow-go
 
 			include ../../parts/b-footer
 			+b-footer("services")
