--- a/styl/blocks/switcher.styl
+++ b/styl/blocks/switcher.styl
@@ -6,6 +6,9 @@
 	border-bottom 1px solid #e4e4f1
 
 .switcher__btn
+	display flex
+	align-items center
+	justify-content center
 	width 2rem
 	height 2rem
 	padding 0
@@ -26,6 +29,7 @@
 	font-weight 400
 	letter-spacing 0.3px
 	text-transform uppercase
+	text-decoration none
 	text-align center
 	color #8492af
 	cursor pointer
