--- a/styl/scaffolding.styl
+++ b/styl/scaffolding.styl
@@ -3,10 +3,12 @@ html
 
 body
 	height 100%
-	padding 0;
-	margin 0;
+	padding 0
+	margin 0
 	font-size 16px
+	-webkit-font-smoothing: antialiased
+	text-rendering: optimizelegibility
 
 img
-	max-width 100%;
-	height auto;
+	max-width 100%
+	height auto
