--- a/b-index.jade
+++ b/b-index.jade
@@ -13,7 +13,7 @@ html(lang="en")
 				section.section
 					.section__wrapper
 						h2.section__title Our Services
-						p.section__text Depending on time, budget, scope, and complexity of your projects we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
+						p.section__text Depending on time, budget, scope, and complexity of your projects we provide 3 options to help shape your tech endeavors by providing IT services as well as extending, relocating of dedicated IT resources.
 
 				section.section.section--without-title
 					.services
@@ -35,19 +35,19 @@ html(lang="en")
 									a.services__link.btn(href="#") Get more info
 							li.services__item.services__item--team
 								.services__item-wrapper
-									h3.services__title Dedicated Development Team
+									h3.services__title Staff Augmentation
 									span.services__recommend recommended for
 									ul.services__recommends-list
 										li.services__recommends-item
 											include icons/checkmark
-											span direct control over project stages
+											span non-time-bound projects
 										li.services__recommends-item
 											include icons/checkmark
-											span full-time engagement of IT experts to your project
+											span app development across diverse technology verticals
 									a.services__link.btn(href="#") Get more info
 							li.services__item.services__item--relocation
 								.services__item-wrapper
-									h3.services__title Specialist for Relocation
+									h3.services__title Relocation Specialist
 									span.services__recommend recommended for
 									ul.services__recommends-list
 										li.services__recommends-item
@@ -55,7 +55,7 @@ html(lang="en")
 											span limited recruitment capabilities
 										li.services__recommends-item
 											include icons/checkmark
-											span building/extending your IT department
+											span extension of in-house application development teams
 									a.services__link.btn(href="#") Get more info
 					.section__wrapper
 						p.section__text Learn more about each of these options and their difference 
@@ -64,13 +64,13 @@ html(lang="en")
 				section.section.section--main-color.section--bottom-with-gradient
 					.section__wrapper
 						h2.section__title Our Added Value
-						p.section__text With delivering what we do the best: development and design of software we provide our customers with
+						p.section__text With delivering what we are most adept at - Distinctive Web Development - we provide our customers with
 						.main-features
 							.main-features__wrapper
 								ul.main-features__list
 									li.main-features__item.main-features-item.main-features-item--icon-left
 										include icons/1-quality
-										span.main-features-item__descr Outstanding quality
+										span.main-features-item__descr Thorough process-related involvement 
 									li.main-features__item.main-features-item.main-features-item--icon-left
 										include icons/2-english
 										span.main-features-item__descr Specialist with proficient technical and language skills
@@ -85,7 +85,7 @@ html(lang="en")
 										span.main-features-item__descr Candidates market overview within 24 hours
 									li.main-features-item.main-features-item--icon-left
 										include icons/6-risk
-										span.main-features-item__descr Long-term partnership
+										span.main-features-item__descr Competence with fair value
 
 				section.section.section--small-padding-bottom
 					.section__wrapper
