--- a/parts/b-header.jade
+++ b/parts/b-header.jade
@@ -21,6 +21,6 @@ mixin b-header(modifier)
 		.page-header__wrapper
 			- if (modifier == "hp")
 				h1.page-header__title Distinctive Web Development
-				p.page-header__text Shaping your tech ideas with smart engineering, creating an outreach for your business.
+				p.page-header__text Shaping your tech ideas with smart engineering, creating an outreach for your business. Where customers are eager to return.
 				a.page-header__scroll-btn(href="#main")
 					include ../icons/arrow
