--- a/services/b-index.jade
+++ b/services/b-index.jade
@@ -13,7 +13,7 @@ html(lang="en")
 				section.section.section--first-after-menu
 					.section__wrapper
 						h1.section__title Services
-						p.section__text Based on scope and duration of a project, on-site or off-premise delivery team location we provide 3 services. <br>The combination of services is available.
+						p.section__text Based on scope and duration of a project, on-site or off-premise delivery team location, Uneed Web provides 3 services to deliver web and mobile solutions for your products. A combination of services is available as well.
 
 				section.section.section--without-padding-top.services-table
 					.services-table__wrapper
@@ -21,8 +21,8 @@ html(lang="en")
 							tr.services-table__row-headings
 								td We provide:
 								th.services-table__heading.services-table__heading--project Project Development
-								th.services-table__heading.services-table__heading--team Dedicated Development Team
-								th.services-table__heading.services-table__heading--relocation Specialist for Relocation
+								th.services-table__heading.services-table__heading--team Staff Augmentation
+								th.services-table__heading.services-table__heading--relocation Relocation Specialist
 								td.services-table__switcher
 									btn.services-table__switch-btn.services-table__switch-btn--prev(type="button")
 										include ../icons/arrow-go
