--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -17,15 +17,16 @@ html(lang="en")
 							a.switcher__btn.switcher__btn--prev
 								include ../../icons/left-arrow
 							a.switcher__name.switcher__name--active(href="/services/outsource/b-index.html") Project Development
-							a.switcher__name(href="/services/outstaff/b-index.html") Dedicated Development Team
+							a.switcher__name(href="/services/outstaff/b-index.html") Staff Augmentation
 							a.switcher__name(href="/services/relocation/b-index.html") Specialist for Relocation
 							a.switcher__btn.switcher__btn--next(href="/services/outstaff/b-index.html")
 								include ../../icons/left-arrow
 
 						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-project
 							h2.section__title.section__title--text-left Project Development
-							p.section__text.section__text--text-left.section__text--with-margin-bottom Aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.
-							p.section__text.section__text--text-left.section__text--with-margin-bottom For long-term projects (6+ months) we suggest you consider the Dedicated Development Team model.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom Looking for greater flexibility and operations scaling?<br>Over 36% of senior managers find project development outsourcing as a way out. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom The project development outsourcing service is aimed at businesses that have a defined objective for the project, constrained in time or budget and do not consider establishing an on-going software development team.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom For long-term projects (6+ months) we suggest you consider the Staff Augmentation model.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
 							a.section__btn.btn(href="/services/b-index.html") Services comparison
 								include ../../icons/arrow-go
