--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -123,15 +123,15 @@
 			background-size cover
 			> *
 				width 70%
-		&--slide-project
-			background-image url("../images/png/outsource.png")
-			background-position top left 52vw
-		&--slide-team
-			background-image url("../images/png/outstaff.png")
-			background-position top left 57vw
-		&--slide-relocation
-			background-image url("../images/png/relocation.png")
-			background-position top left
+		// &--slide-project
+		// 	background-image url("../images/png/outsource.png")
+		// 	background-position top left 52vw
+		// &--slide-team
+		// 	background-image url("../images/png/outstaff.png")
+		// 	background-position top left 57vw
+		// &--slide-relocation
+		// 	background-image url("../images/png/relocation.png")
+		// 	background-position top left
 			
 		&--on-game-score-block
 			background-image linear-gradient(to top, #ffffff, #f7f7f7)
