--- a/services/outstaff/b-index.jade
+++ b/services/outstaff/b-index.jade
@@ -17,14 +17,15 @@ html(lang="en")
 							a.switcher__btn.switcher__btn--prev(href="/services/outsource/b-index.html")
 								include ../../icons/left-arrow
 							a.switcher__name(href="/services/outsource/b-index.html") Project Development
-							a.switcher__name.switcher__name--active(href="/services/outstaff/b-index.html") Dedicated Development Team
+							a.switcher__name.switcher__name--active(href="/services/outstaff/b-index.html") Staff Augmentation
 							a.switcher__name(href="/services/relocation/b-index.html") Specialist for Relocation
 							a.switcher__btn.switcher__btn--next(href="/services/relocation/b-index.html")
 								include ../../icons/left-arrow
 
 						section.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-team
-							h2.section__title.section__title--text-left Dedicated Development Team
-							p.section__text.section__text--text-left.section__text--with-margin-bottom A cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. You get control over the selection and management of your dedicated IT team, with no unexpected costs, flexible workload and scope.
+							h2.section__title.section__title--text-left Staff Augmentation
+							p.section__text.section__text--text-left.section__text--with-margin-bottom How to add staff without bearing the cost and liabilities of additional full time employees?<br>36% of organizations who outsource effectively are convinced that this could be achieved with a staff augmentation model.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom Uneed Web provides this cost-effective model for businesses that require high-quality, efficient resources within an optimized time frame. You get control over the selection and management of your dedicated IT team with flexible workload and scope.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom While you focus on your projects, we will take care of all time-consuming tasks and ensure clear communication between your in-house team and offshore team.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
 							a.section__btn.btn(href="/services/b-index.html") Services comparison
