--- a/services/relocation/b-index.jade
+++ b/services/relocation/b-index.jade
@@ -17,14 +17,15 @@ html(lang="en")
 							a.switcher__btn.switcher__btn--prev(href="/services/outstaff/b-index.html")
 								include ../../icons/left-arrow
 							a.switcher__name(href="/services/outsource/b-index.html") Project Development
-							a.switcher__name(href="/services/outstaff/b-index.html") Dedicated Development Team
-							a.switcher__name.switcher__name--active(href="/services/relocation/b-index.html") Specialist for Relocation
+							a.switcher__name(href="/services/outstaff/b-index.html") Staff Augmentation
+							a.switcher__name.switcher__name--active(href="/services/relocation/b-index.html") Relocation Specialist
 							a.switcher__btn.switcher__btn--next
 								include ../../icons/left-arrow
 
 						section.slider__slide-inner.section.section--without-padding-top.section--small-padding-bottom.section--slide.section--slide-relocation
-							h2.section__title.section__title--text-left Specialist for Relocation
-							p.section__text.section__text--text-left.section__text--with-margin-bottom The cost-benefit service that allows you to access a richer pool of IT experts and leverage your human capital. When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
+							h2.section__title.section__title--text-left Relocation Specialist
+							p.section__text.section__text--text-left.section__text--with-margin-bottom Wonder how to access strategic talents?<br>28% of executives are convinced that accessing strategic top talents adds value beyond standard options. Uneed Web provides a cost-benefit service of Relocation Specialist. Access a richer pool of IT experts and leverage your human capital.
+							p.section__text.section__text--text-left.section__text--with-margin-bottom When the top talents for your industry are above your budget or simply not located in your area we will provide you with high-skilled candidates that are willing to relocate to your place.
 							p.section__text.section__text--text-left.section__text--with-margin-bottom You do 5%, we do the remaining 95% for you.
 							a.section__btn.btn(href="/services/b-index.html") Services comparison
 								include ../../icons/arrow-go
