--- a/b-index.jade
+++ b/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include parts/b-head
-	+head("Remote software development | UNeed Web", "offshore software development, web development outsourcing, web design outsourcing", "Bringing cohesion, integration and outreach for your business with forefront IT services. We craft web and mobile projects, enliven them with design.")
+	+head("Web development company | Uneed Web", "offshore software development, web development outsourcing, web design outsourcing", "Uneed Web is a web development company. We shape your tech ideas with smart engineering, create an outreach for your business, provide an access to talents that adds value.")
 	body
 		.page-wrapper
 
