--- a/contact-us/b-index.jade
+++ b/contact-us/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/b-head
-	+head("Something to Ask - Contact Us | UNeed Web", "where to outsource software development, how to find offshore software development company, why outsource web development, how to find web design company", "We would love to hear what projects, ideas, endeavours you have! Fill in the form and we'll get back as soon as we can!")
+	+head("Contact Us | Uneed Web", "where to outsource software development, how to find offshore software development company, why outsource web development, how to find web design company", "We would love to hear what projects, ideas, endeavours you have! Fill in the form and we'll get back as soon as we can!")
 	body
 		.page-wrapper
 
