--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/b-head
-	+head("Portfolio | UNeed Web", "Web development projects, mobile development projects, product design", "Uneed Web drives innovation into services by crafting web and mobile applications, enlivening them with web design.")
+	+head("Mobile Development - YOW | Uneed Web", "Web development projects, mobile development projects, product design", "YOW - YOUR OPEN WORLD. Is our own developed mobile app that keeps track of the places you visit and shows your exploration progress.")
 	body
 		.page-wrapper
 
