--- a/portfolio/banking/index.jade
+++ b/portfolio/banking/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Portfolio - Banking | Uneedweb", "Fee billing system, fee management system, Web Development, Automated billing workflow", "Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.")
+	+head("Banking App Development | Uneed Web", "Fee billing system, fee management system, Web Development, Automated billing workflow", "Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
