--- a/portfolio/localisation/index.jade
+++ b/portfolio/localisation/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Portfolio - Data Management | Uneedweb", "Data Management, Localisation helper, Web Development", "Localisation helper a software that eases the translation of an online sports application into multiple languages.")
+	+head("Data Management | Uneed Web", "Data Management, Localisation helper, Web Development", "Localisation helper a software that eases the translation of an online sports application into multiple languages.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
