--- a/portfolio/social-travel/index.jade
+++ b/portfolio/social-travel/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Portfolio - Social - Travel | Uneedweb", "Travel social platform, Web Development", "Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.")
+	+head("Social Network App Development | Uneed Web", "Travel social platform, Web Development", "Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
