--- a/portfolio/sport/index.jade
+++ b/portfolio/sport/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Portfolio - Sport | Uneedweb", "Sports application, Web Development, IPTV software", "Development a web application for a sports betting company for the audience of 5 million users.")
+	+head("Sports App Development | Uneed Web", "Sports application, Web Development, IPTV software", "Development a web/mobile application for a sports betting company. The app features statistics, schedules, standings, fixtures, pre-match lineups, close game situations.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
