--- a/services/b-index.jade
+++ b/services/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/b-head
-	+head("Uneed Services | Uneed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "Uneed Web partners with companies to sustain them by project development, providing dedicated teams and specialists for relocation.")
+	+head("Services | Uneed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "Uneed Web partners with companies to sustain them by project development, providing IT staff augmentation and helping with relocation specialist.")
 	body
 		.page-wrapper
 
