--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Project Development | UNeed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "According to recent KPMG study 36% of senior managers find project development outsourcing as a greater access to better standardized processes.")
+	+head("Project Development | Uneed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "Looking for greater flexibility and operations scaling? Over 36% of senior managers find project development outsourcing as a way out. With offloading your project to us you will optimize work and save the best in-house staff for more valuable tasks.")
 
 	body
 		.page-wrapper
