--- a/services/relocation/b-index.jade
+++ b/services/relocation/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Specialist for Relocation | UNeed Web", "full-stack, fron-end developer, back-end developer, PHP developer, Java developer, Web Developer, in-house developer", "Access strategic talents that adds value beyond standard options. We are your committed partner to find top specialists for relocation.")
+	+head("Relocation Specialist | Uneed Web", "full-stack, fron-end developer, back-end developer, PHP developer, Java developer, Web Developer, in-house developer", "Wonder how to access strategic talents? 28% of executives are convinced that accessing strategic top talents adds value beyond standard options. Uneed Web provides a cost-benefit service of Relocation Specialist.")
 
 	body
 		.page-wrapper
