--- a/services/outstaff/b-index.jade
+++ b/services/outstaff/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Augmented Development Team | Uneed Web", "Team Extension, Dedicated Team, Outstaffing, Benefits of offshore software development", "43% of companies who outsource look for scaling their operations. With augmented development team you will attain higher flexibility for scaling.")
+	+head("Staff Augmentation | Uneed Web", "Team Extension, Dedicated Team, Outstaffing, Benefits of offshore software development", "How to add staff without bearing the cost and liabilities of additional full time employees? 36% of organizations who outsource effectively are convinced this could be achieved with a staff augmentation model.")
 
 	body
 		.page-wrapper
