texts and meta: small errors fix

--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/b-head
-	+head("Mobile Development - YOW | Uneed Web", "Web development projects, mobile development projects, product design", "YOW - YOUR OPEN WORLD. Is our own developed mobile app that keeps track of the places you visit and shows your exploration progress.")
+	+head("Portfolio | Uneed Web", "Web development projects, mobile development projects, product design", "We craft web and mobile applications for variety of industries. Take a glimpse into the projects we developed.")
 	body
 		.page-wrapper
 
