--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
-	+head("Portfolio - yow | Uneedweb", "Travel application, Mobile Development, online scratch map", "Our own mobile application that keeps track of the places you visit and shows your exploration progress.")
+	+head("Mobile Development - YOW | Uneed Web", "Web development projects, mobile development projects, product design", "YOW - YOUR OPEN WORLD. Is our own developed mobile app that keeps track of the places you visit and shows your exploration progress.")
 	body#portfolio-project-page.project-yow
 		include ../../parts/header
 		include ../../parts/mobile-nav
