--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -18,7 +18,7 @@ html(lang="en")
 								include ../../icons/left-arrow
 							a.switcher__name.switcher__name--active(href="/services/outsource/b-index.html") Project Development
 							a.switcher__name(href="/services/outstaff/b-index.html") Staff Augmentation
-							a.switcher__name(href="/services/relocation/b-index.html") Specialist for Relocation
+							a.switcher__name(href="/services/relocation/b-index.html") Relocation Specialist
 							a.switcher__btn.switcher__btn--next(href="/services/outstaff/b-index.html")
 								include ../../icons/left-arrow
 
