wrappers and services-slides fix, project-items animated

--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -18,7 +18,7 @@ html(lang="en")
 				section.section.section--without-padding-top
 					.projects-gallery
 						.projects-gallery__wrapper
-							.switcher
+							.switcher.switcher--tight
 								button.switcher__btn.switcher__btn--prev(type="button")
 									include ../icons/left-arrow
 								h3.switcher__name.switcher__name--active All
