--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -72,6 +72,12 @@
 		font-size 48px
 		
 	.page-header__text
-		padding-right 21rem
-		padding-left 21rem
+		max-width 44rem
+		margin 0 auto
 		font-size 18px
+		
+@media $desktop-widhts
+
+	.page-header
+		&--hp
+			max-height 1100px
