--- a/styl/blocks/portfolio-item.styl
+++ b/styl/blocks/portfolio-item.styl
@@ -52,20 +52,20 @@
 		min-height 320px
 		padding-bottom 0
 		&--web
-			background-position right center
-			background-size 395px
+			background-position right -12rem top 3rem
+			background-size 500px
 		&--mobile
-			background-position right 3rem center
+			background-position right 1rem top 1rem
 		&--design
 			background-position right center
 		
 	.portfolio-item__descr
-		width 30rem
+		width 26rem
 		text-align left
 		
 	.portfolio-item__tags
 		justify-content flex-start
-		width 30rem
+		width 26rem
 		
 	.portfolio-item__btn
 		display block
