--- a/styl/blocks/switcher.styl
+++ b/styl/blocks/switcher.styl
@@ -53,6 +53,10 @@
 
 	.switcher
 		justify-content space-around
+		&--tight
+			max-width 46rem
+			margin-right auto
+			margin-left auto
 
 	.switcher__btn
 		visually-hidden()
