--- a/styl/mixins.styl
+++ b/styl/mixins.styl
@@ -5,17 +5,17 @@ wrapper()
 		width 648px
 		
 	@media $desktop-widths
-		width 1200px
+		width 1170px
 		
-	@media $desktop-large-widths
-		width 1400px
+	// @media $desktop-large-widths
+	// 	width 1400px
 		
 wrapper-fluid()
 	width 85%
 	margin 0 auto
 	
-	@media $desktop-large-widths
-		width 1400px
+	@media $desktop-widths
+		width 1170px
 
 clearfix()
 	&::after
