--- a/styl/blocks/main-features-item.styl
+++ b/styl/blocks/main-features-item.styl
@@ -2,14 +2,15 @@
 	display flex
 	align-items center
 	justify-content flex-start
-	padding-top 20px
-	padding-bottom 20px
+	padding 1rem
+	padding-top 0
 	&--icon-left
 		svg
 			flex-shrink 0
+			margin-right 1rem
 
 .main-features-item__descr
-	margin-left 1.25rem
+	margin 0
 	font-size 16px
 	font-weight 400
 	letter-spacing 0.3px
@@ -18,5 +19,7 @@
 	
 @media $tablet-widths
 
-	.main-features-item__descr
-		margin 1.25rem
+	.main-features-item
+		width 19rem
+		padding 1rem
+		padding-left 0
