--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -46,7 +46,8 @@
 			flex-direction column
 
 .main-nav__wrapper
-	wrapper-fluid()
+	width 85%
+	margin 0 auto
 	display flex
 	align-items center
 	justify-content space-between
