--- a/styl/blocks/services.styl
+++ b/styl/blocks/services.styl
@@ -19,7 +19,7 @@
 		background-image url("../images/gif/relocation.gif")
 	
 .services__item-wrapper
-	wrapper-fluid()
+	wrapper()
 	display flex
 	flex-direction column
 	align-items center
@@ -55,15 +55,14 @@
 
 .services__recommends-item
 	position relative
-	margin-bottom 0.5rem
 	font-size 14px
 	font-weight 400
+	line-height 1.7
 	color #0e1a35
 	svg
 		position absolute
-		top 50%
+		top 7px
 		left -1.5rem
-		transform translateY(-50%)
 		margin-right 0.7rem
 	
 .services__link
